feat: implement new user object in return of /login api
